--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 
 <body class="bg-green">
     <div class="dashboard-container">
-        <div class="glass-card animate-fade-in">
+        <div class="glass-card animate-fade-in" style="margin: 20px; padding: 20px;">
             <h2>Dashboard</h2>
             <div class="personal-data">
                 <p><strong>Umur:</strong> <span id="age-display"></span></p>
