--- a/personal_data.html
+++ b/personal_data.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isi Data Diri</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .form-styled {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-styled label {
+            margin-bottom: 5px;
+        }
+
+        .form-styled input,
+        .form-styled select {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 
 <body class="bg-green">
     <div class="step-container">
         <div class="glass-card animate-slide-in">
             <h2>Isi Data Diri</h2>
+            <br>
             <form id="personal-data-form" class="form-styled">
                 <label for="age">Umur:</label>
                 <input type="number" id="age" name="age" required>
