--- a/step1.html
+++ b/step1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step 1 - Pengambilan Gambar</title>
+    <title>Langkah Selanjutnya: Pengambilan Gambar</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
