--- a/step1.html
+++ b/step1.html
@@ -11,7 +11,7 @@
 <body class="bg-green">
     <div class="step-container">
         <div class="glass-card animate-slide-in">
-            <h2>Langkah 1: Pengambilan Gambar</h2>
+            <h2>Langkah Selanjutnya: Pengambilan Gambar</h2>
             <p>Silakan ambil gambar lipatan kulit Anda untuk analisis.</p>
             <img src="contohlipatanleher.png" alt="" style="margin: 1rem 0;"> <!-- Add margin for spacing -->
             <div style="display: flex; justify-content: center; width: 100%;">
