--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,8 @@
 </head>
 
 <body class="bg-green">
-    <div class="dashboard-container">
+    <div class="dashboard-container"
+        style="display: flex; justify-content: center; align-items: center; min-height: 100vh;">
         <div class="glass-card animate-fade-in" style="margin: 20px; padding: 20px;">
             <h2>Dashboard</h2>
             <div class="personal-data">
