--- a/personal_data.html
+++ b/personal_data.html
@@ -14,11 +14,32 @@
 
         .form-styled label {
             margin-bottom: 5px;
+            font-weight: bold;
         }
 
         .form-styled input,
         .form-styled select {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
+            /* Reduced margin */
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .form-styled .form-group {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 10px;
+            /* Reduced margin */
+        }
+
+        .form-styled .form-group label {
+            margin-bottom: 5px;
+        }
+
+        .form-styled .form-group input,
+        .form-styled .form-group select {
+            flex: 1;
         }
     </style>
 </head>
@@ -29,20 +50,28 @@
             <h2>Isi Data Diri</h2>
             <br>
             <form id="personal-data-form" class="form-styled">
-                <label for="age">Umur:</label>
-                <input type="number" id="age" name="age" required>
+                <div class="form-group">
+                    <label for="age">Umur:</label>
+                    <input type="number" id="age" name="age" required>
+                </div>
 
-                <label for="weight">Berat Badan (kg):</label>
-                <input type="number" id="weight" name="weight" required>
+                <div class="form-group">
+                    <label for="weight">Berat Badan (kg):</label>
+                    <input type="number" id="weight" name="weight" required>
+                </div>
 
-                <label for="height">Tinggi Badan (cm):</label>
-                <input type="number" id="height" name="height" required>
+                <div class="form-group">
+                    <label for="height">Tinggi Badan (cm):</label>
+                    <input type="number" id="height" name="height" required>
+                </div>
 
-                <label for="family-diabetes">Apakah ada keluarga dengan diabetes?</label>
-                <select id="family-diabetes" name="family-diabetes" required>
-                    <option value="yes">Ya</option>
-                    <option value="no">Tidak</option>
-                </select>
+                <div class="form-group">
+                    <label for="family-diabetes">Apakah ada keluarga dengan diabetes?</label>
+                    <select id="family-diabetes" name="family-diabetes" required>
+                        <option value="yes">Ya</option>
+                        <option value="no">Tidak</option>
+                    </select>
+                </div>
 
                 <button type="button" class="primary-btn" onclick="submitPersonalData()">Lanjutkan</button>
             </form>
