--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
                 <div class="result-item">
                     <img src="family.png" alt="Riwayat Keluarga" class="result-icon">
                     <h3>Riwayat Keluarga</h3>
-                    <p style="text-align: center;">Keluarga dengan diabetes: <strong><span
+                    <p style="text-align: center;">Keluarga dengan riwayat diabetes: <strong><span
                                 id="family-diabetes-display"></span></strong>.</p>
                     <p class="analysis" style="text-align: center;">Riwayat keluarga dengan diabetes dapat meningkatkan
                         risiko Anda.</p>
