--- a/dashboard.html
+++ b/dashboard.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .centered-heading {
+            text-align: center;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body class="bg-green">
     <div class="dashboard-container"
         style="display: flex; justify-content: center; align-items: center; min-height: 100vh;">
         <div class="glass-card animate-fade-in" style="margin: 20px; padding: 20px;">
-            <h2>Dashboard</h2>
+            <h2 class="centered-heading">Data Diri Berhasil Tersimpan!</h2>
             <div class="personal-data">
                 <p><strong>Umur:</strong> <span id="age-display"></span></p>
                 <p><strong>Berat Badan:</strong> <span id="weight-display"></span> kg</p>
