--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
             justify-content: center;
             align-items: center;
         }
+
+        .subtitle {
+            text-align: center;
+            /* Center the subtitle */
+            margin: 0 auto;
+            /* Center the subtitle horizontally */
+            display: block;
+            width: 100%;
+        }
+
+        .glass-card p {
+            text-align: center;
+            /* Center the paragraph */
+            margin: 0 auto;
+            /* Center the paragraph horizontally */
+            display: block;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -33,7 +51,9 @@
     <main class="bg-green">
         <div class="glass-card animate-fade-in">
             <h1>Selamat Datang di <span class="brand">NIMOS</span></h1>
-            <p class="subtitle" style="text-align: left;">Sistem Pemantauan dan Observasi Non-Invasif</p>
+            <p>NIMOS adalah sistem non-invasif yang memudahkan deteksi dini
+                diabetes dengan cara yang praktis, inklusif, dan terjangkau untuk semua
+            </p>
             <div class="button-group">
                 <button class="primary-btn" onclick="fillPersonalData()">Mulai Deteksi Dini</button>
             </div>
