--- a/personal_data.html
+++ b/personal_data.html
@@ -41,13 +41,18 @@
         .form-styled .form-group select {
             flex: 1;
         }
+
+        .centered-heading {
+            text-align: center;
+            width: 100%;
+        }
     </style>
 </head>
 
 <body class="bg-green">
     <div class="step-container">
         <div class="glass-card animate-slide-in">
-            <h2>Isi Data Diri</h2>
+            <h2 class="centered-heading">Data Diri Berhasil Tersimpan!</h2>
             <br>
             <form id="personal-data-form" class="form-styled">
                 <div class="form-group">
