--- a/results.html
+++ b/results.html
@@ -18,8 +18,8 @@
                     <h3>Usia</h3>
                     <p style="text-align: center;">Usia Anda adalah <strong><span id="age-display"></span>
                             tahun</strong>.</p>
-                    <p class="analysis" style="text-align: center;">Usia yang lebih tua dapat meningkatkan risiko
-                        diabetes.</p>
+                    <p class="analysis" style="text-align: center;">Risiko diabetes dapat meningkat seiring dengan
+                        bertambahnya usia</p>
                 </div>
 
                 <div class="result-item">
