--- a/personal_data.html
+++ b/personal_data.html
@@ -52,7 +52,7 @@
 <body class="bg-green">
     <div class="step-container">
         <div class="glass-card animate-slide-in">
-            <h2 class="centered-heading">Data Diri Berhasil Tersimpan!</h2>
+            <h2 class="centered-heading">Isi Data Diri</h2>
             <br>
             <form id="personal-data-form" class="form-styled">
                 <div class="form-group">
